<resources>
    <string name="app_name">慧屏</string>
    <string name="versionName">1.0</string>
    <string name="versionCode">1</string>
    <string name="login">登录</string>
    <string name="confirm">确认</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="icon1">价格策略</string>
    <string name="icon2">模板维护</string>
    <string name="icon3">门店管理</string>
    <string name="icon4">空间货位</string>
    <string name="title_activity_guide">GuideActivity</string>
</resources>
