<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBg"
    android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/my" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/app_name"
                    android:textSize="@dimen/sp_24" />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="服务选择"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/sp_20"/>
            <LinearLayout
                android:id="@+id/ll_choose_server"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBgGary"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp_10"
                    android:src="@drawable/home_server"/>
                <TextView
                    android:id="@+id/tv_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@color/colorWhite"
                    android:text="主服务"/>
            </LinearLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="@dimen/dp_20">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon1"
                            android:textColor="@color/colorYellow"
                            android:textSize="@dimen/sp_20" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_form_board"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon2"
                            android:textColor="@color/colorGreen"
                            android:textSize="@dimen/sp_20" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_store"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon3"
                            android:textColor="@color/iconRed"
                            android:textSize="@dimen/sp_20" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_goods_shelf"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon4"
                            android:textColor="@color/colorTextGary"
                            android:textSize="@dimen/sp_20" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao4"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true" />
                    </RelativeLayout>



                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:visibility="invisible">

                    </RelativeLayout>



                </TableRow>
            </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#2E2E2E"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@drawable/my_name" />

        <TextView
            android:id="@+id/right_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/username"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:id="@+id/ll_update_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/my_serect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="修改密码"
                android:textColor="@color/colorTextGary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/my_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="退出登录"
                android:textColor="@color/colorTextGary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
